1998-09-04  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* win32.c (gethostname): Expand comment about gethostname
	vs. GetComputerName (reported by Randy Coulman).

1998-07-01  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* startserver.c (wnt_shutdown_server): Check for errors from close().

1998-06-30  Noel Cragg

    * startserver.c: add a global variable which notes if we've opened
	a socket.  Since the code in client.c will call wnt_shutdown_server
	regardless of which client method we've selected, we need to make
	sure and not call shutdown or closesocket on a pipe (it won't work).
	(wnt_shutdown_server): use the new global to decide whether or not
	to call socket routines or simply use close.
	

1998-06-11  Jim Kingdon

	* config.h (CVS_STAT, CVS_LSTAT): Define.
	* filesubr.c, config.h (wnt_stat, wnt_lstat, check_statbuf):
	New functions.

1998-04-09  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (link_file): Remove; no longer used.

Tue Feb 17 02:31:41 1998  Noel Cragg  <noel@swish.red-bean.com>

	* filesubr.c (last_component): return the top-level directory when
 	asked about the top-level directory.

Fri Jan 16 00:57:31 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Remove.  As far as I know the Windows hacks in this
	file have been superceded by improvements to Cygwin and/or Ian's
	recent changes to src/sanity.sh.  The ones I noticed: we had been
	working around lack of /dev/null (apprently Cygwin now has it); we
	had been not expecting rm -rf to delete readonly files (apparently
	it now does); there was an issue with case of arguments passed on
	command line (it would seem like Cygwin has changed this).
	I also notice that the file had not even been in the distribution
	because it was missing from Makefile.in (ugh).

13 Jan 1998  Jim Kingdon

	* run.c (run_exec): Change parameters from char * to const char *.

Tue Jan 13 16:57:56 1998  Ian Lance Taylor  <ian@cygnus.com>

	* config.h (FOLD_FN_CHAR): Don't define; instead move to